[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
common = { path = "../common" }
poem = { version = "1.3", features = ["anyhow", "websocket", "static-files"] }
reqwest = { version = "0.11.18", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "chrono", "sqlite"] }
tokio = { version = "1.31", features = ["full"] }
