[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
common = { path = "../common", features = ["frontend"] }
console_error_panic_hook = "0.1.7"
itertools = "0.11"
reqwest = { version = "0.11.18", features = ["json"] }
seed = "0.10.0"
time = "0.1.45"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
